--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Audio.cs" />
      <Compile Include="Assets\Level2.cs" />
+     <Compile Include="Assets\LoadOnClick.cs" />
      <Compile Include="Assets\TheDude.cs" />
      <None Include="Assets\Standard Assets\Skyboxes\_skybox info.txt" />
  <Reference Include="UnityEngine.UI">
