--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,12 +51,18 @@
      <Compile Include="Assets\GravityHandler.cs" />
      <Compile Include="Assets\LoadOnClick.cs" />
      <Compile Include="Assets\MainLevelHandler.cs" />
+     <Compile Include="Assets\ParticleHandler.cs" />
      <Compile Include="Assets\PauseMenu.cs" />
+     <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\Audio\Packs\Zero Gravity\Zero Gravity_ReadMe.txt" />
      <None Include="Assets\Standard Assets\Skyboxes\_skybox info.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Assembly-UnityScript-firstpass.unityproj">
+      <Project>{4F805B07-AF15-C3BB-2D73-68FA2D53D1B8}</Project>      <Name>Assembly-UnityScript-firstpass</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
