--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -53,9 +53,9 @@
      <Compile Include="Assets\LoadOnClick.cs" />
      <Compile Include="Assets\MainCharacterStats.cs" />
      <Compile Include="Assets\MainLevelHandler.cs" />
+     <Compile Include="Assets\MovePlatform.cs" />
      <Compile Include="Assets\ParticleHandler.cs" />
      <Compile Include="Assets\PauseMenu.cs" />
-     <Compile Include="Assets\PlatformMovement.cs" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\Audio\Packs\Zero Gravity\Zero Gravity_ReadMe.txt" />
      <None Include="Assets\Standard Assets\Skyboxes\_skybox info.txt" />
